<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ui_droidcafe.MainActivity">

    <item
        android:id="@+id/action_contacts"
        android:orderInCategory="100"
        android:title="@string/action_contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        app:showAsAction="always"
        android:icon="@drawable/ic_shopping_cart"/>

    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="always"
        android:icon="@drawable/ic_status"/>

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="30"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorites"/>

</menu>
